--- a/react-firebase-login/package.json
+++ b/react-firebase-login/package.json
@@ -37,5 +37,28 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/edmundnwl/RaveNUS.git"
+  },
+  "keywords": [
+    "NUS",
+    "NUSMods",
+    "login",
+    "register"
+  ],
+  "author": "Edmund Ng",
+  "contributors": [{
+    "name": "Kenneth Seet",
+    "email": "kenurfseet@gmail.com"
+  }],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/edmundnwl/RaveNUS/issues"
+  },
+  "homepage": "https://github.com/edmundnwl/RaveNUS#readme"
 }
