--- a/react-firebase-login/package.json
+++ b/react-firebase-login/package.json
@@ -2,12 +2,15 @@
   "name": "react-firebase-login",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.2.3",
+    "express": "^4.18.2",
     "firebase": "^9.22.1",
+    "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-dom": "^18.2.0",
@@ -40,7 +43,6 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/edmundnwl/RaveNUS.git"
@@ -52,10 +54,12 @@
     "register"
   ],
   "author": "Edmund Ng",
-  "contributors": [{
-    "name": "Kenneth Seet",
-    "email": "kenurfseet@gmail.com"
-  }],
+  "contributors": [
+    {
+      "name": "Kenneth Seet",
+      "email": "kenurfseet@gmail.com"
+    }
+  ],
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/edmundnwl/RaveNUS/issues"
