--- a/react-firebase-login/package.json
+++ b/react-firebase-login/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "express": "^4.18.2",
     "firebase": "^9.22.1",
+    "mdb-react-ui-kit": "^6.1.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
