--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.4.0",
+    "@iconify/react": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,6 +13,8 @@
     "bootstrap": "^5.3.0",
     "express": "^4.18.2",
     "firebase": "^9.22.1",
+    "google-map-react": "^2.2.1",
+    "jquery": "^3.7.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mysql": "^2.18.1",
     "react": "^18.2.0",
@@ -68,5 +71,8 @@
   "bugs": {
     "url": "https://github.com/edmundnwl/RaveNUS/issues"
   },
-  "homepage": "https://github.com/edmundnwl/RaveNUS#readme"
+  "homepage": "https://github.com/edmundnwl/RaveNUS#readme",
+  "devDependencies": {
+    "@iconify/icons-mdi": "^1.2.46"
+  }
 }
