--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,18 @@
   "private": true,
   "type": "module",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@fortawesome/fontawesome-free": "^6.4.0",
     "@iconify/react": "^4.1.0",
+    "@mui/icons-material": "^5.11.16",
+    "@mui/material": "^5.13.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "bootstrap-star-rating": "^4.1.2",
     "express": "^4.18.2",
     "firebase": "^9.22.1",
     "google-map-react": "^2.2.1",
@@ -19,9 +24,11 @@
     "mysql": "^2.18.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
+    "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^2.1.3",
+    "reactstrap": "^9.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
