--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "^6.12.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^9.2.0",
+    "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
