--- a/client/package.json
+++ b/client/package.json
@@ -26,9 +26,11 @@
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^2.1.3",
     "reactstrap": "^9.2.0",
+    "store": "^2.0.12",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
   },
