--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "bootstrap-star-rating": "^4.1.2",
     "express": "^4.18.2",
     "firebase": "^9.22.1",
+    "geofirestore": "^5.2.0",
     "google-map-react": "^2.2.1",
     "jquery": "^3.7.0",
     "mdb-react-ui-kit": "^6.1.0",
