--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "reactstrap": "^9.2.0",
     "store": "^2.0.12",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "homepage": "."
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
