--- a/client/package.json
+++ b/client/package.json
@@ -33,8 +33,7 @@
     "reactstrap": "^9.2.0",
     "store": "^2.0.12",
     "uuid": "^9.0.0",
-    "web-vitals": "^2.1.4",
-    "homepage": "."
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
@@ -83,7 +82,7 @@
   "bugs": {
     "url": "https://github.com/edmundnwl/RaveNUS/issues"
   },
-  "homepage": "https://github.com/edmundnwl/RaveNUS#readme",
+  "homepage": ".",
   "devDependencies": {
     "@iconify/icons-mdi": "^1.2.46"
   }
