--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-star-rating": "^4.1.2",
+    "eslint": "^8.44.0",
     "express": "^4.18.2",
     "firebase": "^9.22.1",
     "geofirestore": "^5.2.0",
@@ -23,13 +24,14 @@
     "jquery": "^3.7.0",
     "mdb-react-ui-kit": "^6.1.0",
     "mysql": "^2.18.1",
+    "nusmoderator": "^3.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.4",
     "react-bootstrap-star-rating": "^3.5.5-alpha.0.3",
     "react-dom": "^18.2.0",
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "reactstrap": "^9.2.0",
     "store": "^2.0.12",
     "uuid": "^9.0.0",
@@ -40,12 +42,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
   },
   "browserslist": {
     "production": [
