--- a/client/package.json
+++ b/client/package.json
@@ -21,7 +21,7 @@
     "classnames": "^2.3.2",
     "eslint": "^8.44.0",
     "express": "^4.18.2",
-    "firebase": "^9.22.1",
+    "firebase": "^9.23.0",
     "geofirestore": "^5.2.0",
     "google-map-react": "^2.2.1",
     "jquery": "^3.7.0",
@@ -39,6 +39,7 @@
     "react-redux": "^8.1.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "^5.0.1",
+    "reactfire": "^4.2.3",
     "reactstrap": "^9.2.0",
     "store": "^2.0.12",
     "uuid": "^9.0.0",
@@ -87,6 +88,7 @@
   },
   "devDependencies": {
     "@iconify/icons-mdi": "^1.2.46",
+    "cypress": "^12.17.2",
     "node-sass": "^7.0.3"
   }
 }
